# MaviraFashionTraining

./: .gitignore  README.md  env.yml  scratch.ipynb
maviratrain/: README.md  pyproject.toml
maviratrain/src/maviratrain/: __init__.py  py.typed  typed.py
maviratrain/src/maviratrain/data/: classification_dataset.py  data_processing.py  mae_dataset.py  normalization.py
maviratrain/src/maviratrain/eval/: __init__.py  eval_classifier.py
maviratrain/src/maviratrain/models/: classifier_model.py  mae_model.py
maviratrain/src/maviratrain/train/: __init__.py  train_classifier.py  train_mae.py
maviratrain/src/maviratrain/utils/: __init__.py  cleanup.py  constants.py  custom_loss.py  custom_transforms.py  general.py  mavira_logging.py  testing.py
maviratrain/src/maviratrain/utils/registration/: register_data.py  register_train_objects.py  register_training.py
notebooks/: classifier_training.ipynb  data_processing.ipynb  mae_training.ipynb
postgres/: README.md  initial_setup.sql  set_up_tables.sh
postgres/tables/: checkpoints.sql  data_processing_jobs.sql  datasets.sql  file_formats.sql  initial_setup.sql  loss_functions.sql  lr_schedulers.sql  normalization_methods.sql  optimizers.sql  train_runs.sql  valid_file_formats.sql
scripts/: initial_setup.sh  reset_data_processing.py  run_classifier_training.py  run_data_processing.py  test_pytorch_install.py  torch_kernel_test.py  torch_test.py  unzip_data.py
tests/: __init__.py  test_placeholder.py
tests/maviratrain/: __init__.py
tests/models/: test_classifier_model.py
tests/postgres/: __init__.py
(+16 files in other folders)
